<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Easy scanner printer</string>
    <string name="action_settings">About</string>


    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
    <string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the camera!</string>
    <string name="permission_camera_never_askagain">Camera permission was denied with never ask again.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>

    <string name="print">Print</string>
    <string name="print_settings">PRINT SETTINGS</string>
    <string name="printing_help">PRINTING HELP</string>
    <string name="print_plugin_manager">Print Plugin Manager</string>
    <string name="print_plugin_manager_description">Help users install their printers PSP</string>
    <string name="print_help_menu">Print Help Menu</string>
    <string name="print_help_menu_description">Provide help content within your application</string>
    <string name="custom_data_title">Please enter the custom data below</string>
    <string name="custom_data_tag">Tag</string>
    <string name="custom_data_value">Value</string>
    <string name="asset">Asset</string>
    <string name="layout_option">PAGE LAYOUT</string>
    <string name="layout_center">Center</string>
    <string name="layout_center_top">Center Top</string>
    <string name="layout_crop">Fill</string>
    <string name="layout_fit">Fit</string>
    <string name="layout_top_left">Top Left</string>
    <string name="margin_option">PAGE MARGINS</string>
    <string name="layout_with_margin">1/2 Inch</string>
    <string name="layout_without_margin">None</string>
    <string name="layout_with_top_margin">Top Only</string>
    <string name="metrics_option">METRICS</string>
    <string name="unique_device_id_per_app">UNIQUE DEVICE ID</string>
    <string name="content_option">CONTENT TYPE</string>
    <string name="content_pdf">PDF</string>
    <string name="content_image">Image</string>
    <string name="lib_font">fonts/HPSimplified_Rg.ttf</string>
    <string name="add_constom_data">Add Data</string>
    <string name="not_encrypted">Not Encrypted</string>
    <string name="unique_per_app">Unique Per App</string>
    <string name="unique_per_vendor">Unique Per Vendor</string>
    <string name="select_a_file">SELECT A FILE</string>


    <string name="document_scann_lib_name" translatable="false">ScanLibrary</string>
    <string name="finish">Finish</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="cant_crop">Can\'t crop the image, change the points</string>
    <string name="transforming">Transforming...</string>

    <string name="mode_none">None</string>
    <string name="mode_black_white">Black &amp; White</string>
    <string name="mode_magic">Magic</string>
    <string name="filters">Filters</string>

    <string name="action_lists">Test lists</string>
    <string name="action_board">Test board </string>
    <string name="action_disable_drag">Disable drag</string>
    <string name="action_enable_drag">Enable drag</string>
    <string name="action_list">List (drag on touch image icon)</string>
    <string name="action_grid_vertical">Grid vertical (drag on long press)</string>
    <string name="action_grid_horizontal">Grid horizontal (drag on long press)</string>
    <string name="action_print">Print/Save PDF</string>
    <string name="action_rename">Rename</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_more">Add more</string>
    <string name="printing_pdf_preview">PREVIEW</string>
    <string name="action_cloud_print">Google cloud print</string>
    <string name="action_save_pdf">Save to PDF</string>
    <string name="action_wifi_print">Print</string>
    <string name="send_to">Share file via...</string>
    <string name="action_wifi_transfer">WIFI Transfer</string>
    <string name="title_activity_setting">Setting</string>
    <string name="action_edit">Edit</string>

    <string name="ftp_no_wifi">Make sure you\'re connected to WiFi</string>
    <string name="start_http">Start WIFI Transfer</string>
    <string name="stop_http">Stop WIFI Transfer</string>
    <string name="http_status_running">Running WIFI Transfer</string>
    <string name="http_status_not_running">Not Running</string>
    <string name="http_no_wifi">Make sure you\'re connected to WiFi</string>
    <string name="http_notif_starting">WIFI Transfer is starting</string>
    <string name="http_notif_title">WIFI Transfer running</string>
    <string name="http_notif_text">at %s</string>
    <string name="http_notif_stop_server">STOP</string>
    <string name="http_port_edit_menu_title">Choose WIFI Transfer Port</string>
    <string name="http_port_change_success">WIFI Transfer port changed successfully</string>
    <string name="http_port_change_error_invalid">Invalid port number selected</string>
    <string name="http">WIFI Transfer</string>
    <string name="is_active_password">Turn On/Off password</string>
    <string name="http_default_password">1234</string>
    <string name="text_message_password_http">Passwrod:</string>
    <string name="http_password_change_error">Can\'t change password when it\'s running</string>
    <string name="http_password_change_success">Password changed successfully</string>
    <string name="http_password_edit_menu_title">Change password</string>
    <string name="suggest_apps">Suggest to you some applications</string>
</resources>