<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.BookActivity">
    <item
        android:id="@+id/action_disable_drag"
        android:title="@string/action_disable_drag"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_drag"
        android:title="@string/action_enable_drag"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

</menu>
