<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rotate"
        android:icon="@drawable/ic_rotate_90_degrees_ccw_white_24dp"
        app:showAsAction="always"
        android:title="@string/rotate"/>

    <item
        android:id="@+id/crop"
        android:icon="@drawable/ic_crop_white_24dp"
        app:showAsAction="always"
        android:title="@string/crop"/>

    <item
        android:id="@+id/colors"
        android:icon="@drawable/ic_color_lens_white_24dp"
        app:showAsAction="always"
        android:title="@string/filters">

    </item>

    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always"
        android:title="@string/finish"/>


</menu>